--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
+    "@ngx-loading-bar/core": "^4.2.0",
+    "@ngx-loading-bar/http-client": "^4.2.0",
+    "@ngx-loading-bar/router": "^4.2.0",
     "jquery": "^3.4.1",
     "ngx-owl-carousel": "^2.0.7",
     "owl.carousel": "^2.3.4",
