--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "jquery": "^3.4.1",
     "ng-zorro-antd": "^8.5.2",
     "ngx-owl-carousel": "^2.0.7",
+    "ngx-toastr": "^11.3.3",
     "owl.carousel": "^2.3.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
