--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@ngx-loading-bar/router": "^4.2.0",
     "jquery": "^3.4.1",
     "ng-zorro-antd": "^8.5.2",
+    "ngx-facebook": "^2.4.0",
     "ngx-owl-carousel": "^2.0.7",
     "ngx-toastr": "^11.3.3",
     "owl.carousel": "^2.3.4",
