--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "laravolt/avatar": "~0.3",
+        "pusher/pusher-php-server": "~4.0",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
